<resources>
    <string name="app_name">生活便签</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="fragment_note">便签</string>
    <string name="fragment_weather">天气</string>
    <string name="fragment_find">发现</string>
    
    <string name="weather_release">发布</string>
    <string name="WD">风向:</string>
    <string name="WS">风向:</string>

    <string name="keyword">关键词</string>
    <string name="time_plan">计划时间</string>
    <string name="new_note">新建便签</string>
    <string name="note_content">请输入内容</string>

    <string name="http_error">网络错误</string>

    <string name="location_text">请输入想查询的城市:</string>
    <string name="location_eg">如:北京、朝阳</string>
    <string name="confirm">确认</string>
    <string name="location">请打开网络或GPS</string>

    <string name="wait">敬请期待</string>
</resources>
